TagsInput: fix ip-switch vertical jump on focus on mobile

--- a/src/assets/less/components/tags-input.less
+++ b/src/assets/less/components/tags-input.less
@@ -60,7 +60,7 @@
 		overflow-x: hidden;
 		width: 100%;
 		min-height: 40px;
-		padding: 4px;
+		padding: 6px;
 		border-radius: 8px;
 		background: #fff;
 		border: 1.5px solid #e7e7ee;
@@ -249,6 +249,7 @@
 			border-radius: 8px;
 			outline: none;
 			width: calc(100% - 2px);
+			margin: 3px 0 -1px;
 
 			@media (min-width: @screen-sm-min) {
 				margin: 0 0 0 3px;
